Kubernetes/03_ingress/ingress_host_based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx 
  rules:
  - host: nginx.nextops.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service 
              port:
                number: 80 
  - host: httpd.nextops.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: httpd-service 
              port:
                number: 80
